# amd

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh
.claude/hooks/: notify-slack.sh
.github/workflows/: release.yml
conf/: AGENTS.md
conf/gromacs/: ala_vacuum.yaml  default.yaml  tip3p.yaml
conf/method/: ala_metadynamics.yaml
conf/plumed/collective_variables/: ala_dipeptide.yaml
conf/system/: ala_dipeptide.yaml  chignolin.yaml  protein.yaml
data/: AGENTS.md
examples/alanine_dipeptide/: README.md  em.mdp  prepare.sh  run_metadynamics.py
md_agent/: AGENTS.md  __init__.py  agent.py  cli.py
md_agent/agents/: AGENTS.md  __init__.py  analysis_agent.py  base.py  cv_agent.py  paper_agent.py
md_agent/config/: AGENTS.md  hydra_utils.py  schemas.py
md_agent/tools/: AGENTS.md  gromacs_tools.py  paper_tools.py  plumed_tools.py  wandb_tools.py
md_agent/utils/: AGENTS.md  file_utils.py  parsers.py
notebook/: visualize.ipynb
templates/: AGENTS.md
tests/: AGENTS.md  test_gromacs_tools.py  test_hydra_utils.py  test_paper_tools.py  test_plumed_tools.py  test_wandb_tools.py  test_web_config.py  test_web_session.py
web/: AGENTS.md
web/backend/: AGENTS.md  analysis_utils.py  db.py  main.py  session_manager.py
web/backend/routers/: AGENTS.md  agents.py  analysis.py  chat.py  config.py  files.py  keys.py  server.py  simulate.py  trajectory.py
web/frontend/: AGENTS.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/frontend/src/: AGENTS.md
web/frontend/src/app/: globals.css  layout.tsx  page.tsx
web/frontend/src/app/login/: page.tsx
web/frontend/src/components/: AGENTS.md  ThemeProvider.tsx
web/frontend/src/components/agents/: AgentModal.tsx
web/frontend/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  ThinkingBlock.tsx  ToolCallCard.tsx
web/frontend/src/lib/: AGENTS.md  agentStream.ts  api.ts  colors.ts  ngl.ts  sse.ts  theme.ts  types.ts
web/frontend/src/store/: sessionStore.ts
(+14 files in other folders)
